[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.1"

serde_json = { version = "1.0", optional = true }
bincode = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_cbor = { version = "0.11", optional = true }

[dev-dependencies]
rand = "0.6"
rstest = "0.2"
matches = "0.1"
fs2 = "0.4"

[features]
default = ["json"]
json = ["dep:serde_json"]
bincode = ["dep:bincode"]
yaml = ["dep:serde_yaml"]
cbor = ["dep:serde_cbor"]


[[example]]
name = "crudexample"
path = "examples/crudexample/src/main.rs"

[[example]]
name = "listexample"
path = "examples/listexample/src/main.rs"

[[example]]
name = "clapgui"
path = "examples/clapgui/src/main.rs"